# purely-functional-data-structures

./: purely-functional-data-structures.cabal
app/: LeftistHeap.hs  Main.hs
