cabal-version:      2.4
name:               purely-functional-data-structures
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Toni Okuogume

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable purely-functional-data-structures
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: LeftistHeap

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.13.0.0
                    , containers
                    , random ^>= 1.2.1
                    , pretty-simple
                    , mtl
    hs-source-dirs:   app
    default-language: Haskell2010
